# dm-toolset

./: .editorconfig  .gitignore  ARCHITECTURE.md  LICENSE
backend/: .env.example  manage.py  pyproject.toml
backend/admin/: asgi.py  settings.py  urls.py  wsgi.py
backend/alembic/: env.py
backend/alembic/versions/: 2afe0a753770_add_character_class_and_race_tables.py  6ef06728f447_seed_class_and_race_reference_data.py  7b185c4529a4_seed_class_and_race_reference_data.py  86ee68e87180_add_hit_points_to_character.py  f26112316832_add_character_class_and_race_tables.py  f3a9c1d8b2e4_add_ability_scores_to_character.py
backend/app/: admin.py
backend/app/migrations/: 0001_initial.py
backend/app/models/: character.py
backend/app/urls/: __init__.py  characters_router.py  registry.py
backend/scripts/: export_openapi.py
backend/src/dm_toolset_backend/: main.py
backend/src/dm_toolset_backend/api/: __init__.py  character_classes.py  character_races.py  characters.py
backend/src/dm_toolset_backend/core/: config.py  db.py
backend/src/dm_toolset_backend/models/: __init__.py  character.py  character_class.py  character_race.py
frontend/: components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: client.ts
frontend/src/assets/: main.css  tailwind.css
frontend/src/components/: GradientImage.vue  Menu.vue  NavBar.vue
frontend/src/composables/: useCharacter.ts  useDiceRoll.ts  usePageTitle.ts
frontend/src/config/: routeConfig.ts
(+19 files in other folders)
