[project]
name = "dm-toolset-backend"
version = "0.1.0"
authors = [
    { name = "Enokk", email = "enokk.dev@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.139.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "sqlmodel>=0.0.39",
    "uvicorn[standard]>=0.51.0",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "debugpy>=1.8.21",
]
